Refactor payment request handling and update Avro model mappings